# SDUSH-RM-2024

./: .gitignore  README.md  SDUWRM2024.gitignore  watchdog.sh  watchdogver2.sh
Detect_For_Jetson/: Jetson部署.md
Detect_For_Jetson/Detect/: CMakeLists.txt  Detect.cpp
Detect_For_Jetson/Detect/AngleSolver/: AngleSolver.cpp  AngleSolver.hpp  CMakeLists.txt
Detect_For_Jetson/Detect/Assets/: CameraParam.yaml
Detect_For_Jetson/Detect/Kalman/: CMakeLists.txt
Detect_For_Jetson/Detect/MvCamera/: MvCamera.cpp  MvCamera.h
Detect_For_Jetson/Detect/Robot/: CMakeLists.txt  Robot.cpp  Robot.h
Detect_For_Jetson/Detect/Serial/: CMakeLists.txt  Serial.cpp  Serial.h
Detect_For_Jetson/Detect/TRTFrame/: CMakeLists.txt  Format_Print.hpp  TRTFrame.cpp  TRTFrame.hpp
Detect_For_Jetson/Detect/TRTModule/: CMakeLists.txt  FindTensorRT.cmake  TRTModule.cpp  TRTModule.hpp
Detect_For_Jetson/Detect/Total_Est/: CMakeLists.txt  Total_Est.cpp  Total_Est.h
Detect_For_Jetson/Detect/Utils/: CMakeLists.txt  Utils.cpp  Utils.h  Utils.hpp
Detect_For_Jetson/DetectTRT/: Detect.cpp
Detect_For_Jetson/DetectTRT/AngleSolver/: AngleSolver.hpp  CMakeLists.txt
Detect_For_Jetson/DetectTRT/Calibrate/: CMakeLists.txt  Camera.cpp  Camera.h  Camera_Calibrate.cpp  Catch&Calibrate.cpp
Detect_For_Jetson/DetectTRT/Kalman/: Kalman.cpp  Kalman.h
Detect_For_Jetson/DetectTRT/MvCamera/: MvCamera.cpp
Detect_For_Jetson/DetectTRT/Serial/: CMakeLists.txt
Detect_For_Jetson/DetectTRT/TRTFrame/: CMakeLists.txt  FindTensorRT.cmake  TRTFrame.hpp
Detect_For_Jetson/DetectTRT/Utils/: Utils.hpp
Detect_For_Jetson/Detect_SelfTRT/: Detect.cpp
Detect_For_Jetson/Detect_SelfTRT/AngleSolver/: AngleSolver.cpp
Detect_For_Jetson/Detect_SelfTRT/Detect/: Detect.cpp
Detect_For_Jetson/Detect_SelfTRT/Detect/AngleSolver/: AngleSolver.cpp  AngleSolver.hpp
Detect_For_Jetson/Detect_SelfTRT/Detect/Assets/: CameraParam.yaml
Detect_For_Jetson/Detect_SelfTRT/Detect/TRTModule/: CMakeLists.txt  TRTModule.hpp
Detect_For_Jetson/Detect_SelfTRT/Detect/Utils/: Utils.hpp
Detect_For_Jetson/Detect_SelfTRT/FormatInfo/: Format_Print.hpp
Detect_For_Jetson/Detect_SelfTRT/Kalman/: Kalman.h
Detect_For_Jetson/Detect_SelfTRT/MvCamera/: CMakeLists.txt
Detect_For_Jetson/Detect_SelfTRT/Serial/: Serial.h
Detect_For_Jetson/Detect_SelfTRT/TRTFrame/: TRTFrame.cpp
Detect_For_Jetson/Detect_SelfTRT/Utils/: Utils.cpp
Detect_For_Jetson/矩阵输入脚本/: Matrix.yaml  main.cpp
Matrix_Input/: CMakeLists.txt  Matrix_Input_Script  Mv_Camera.cpp  Mv_Camera.h  main.cpp
Matrix_Input/Camera/log/: error_20240320-105951.5774
矩阵输入脚本/: CMakeLists.txt
